--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,26 @@ baseurl: "" # the subpath of your site, e.g. /blog
 address: "Rua Louis Braille, n° 85 - Residencial Paineiras - Poços de Caldas"
 phone: (35) 3714-3807
 
+# Blog settings
+encoding: 'utf-8'
+permalink: /:categories/:title/
+# pretty_categories:
+#   - Notícias
+#   - Atividades
+#   - Eventos
+#   - Emprego
+pretty_categories:
+  noticias: Notícias
+  atividades: Atividades
+  eventos: Eventos
+  emprego: Emprego
+
 # For GitHub pages
 url: "https://aadv-puc.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+
+# Minima configurations
+minima:
+  date_format: "%d/%m/%Y"
 
 # Build settings
 theme: minima
