--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 # Front Matter Geral
-title: Blog da AADV
+title: Atividades da AADV
 email: aadv@aadv.com.br
 github_username: AADV-PUC
 
